# converso

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-formatter.yml  documentation.yml  linter.yml  publish.yml  unit-tests.yml
converso/: pyproject.toml
converso/converso/conversational_engine/: __init__.py
converso/converso/conversational_engine/form_agent/: __init__.py  form_tool.py
converso/tests/unit/conversational_engine/: test_form_agent_executor.py
docs/docs/: tree.md
evaluation/: evaluator.py  evaluator_helpers.py  prompt_generator.py
evaluation/prompts/: prompts_old.json
evaluation/tools/: __init__.py
evaluation/tools/form_tools/: __init__.py  calendar_retriever.py  gmail_retriever.py
evaluation/tools/structured_tools/: __init__.py  calendar_creator.py  calendar_retriever.py  gmail_retriever.py  gmail_sender.py  online_purchase.py
example/: form_agent.ipynb
src/converso/: __init__.py
src/converso/conversational_engine/: __init__.py
src/converso/conversational_engine/form_agent/: __init__.py  form_agent_executor.py  form_tool.py  form_tool_executor.py  model_factory.py
tests/: .coverage
tests/unit/conversational_engine/: mocks.py  test_form_agent_executor.py  test_form_tool.py
